# ripl_articulation

./: LICENSE  README.md  pyproject.toml
src/ripl_articulation/: __init__.py  estimator.py  factors.py  utils.py
tests/: test_relative_pose_estimator.py
